--- a/frontend/src/app/pages/storage/storage-volumes/storage-volumes.component.html
+++ b/frontend/src/app/pages/storage/storage-volumes/storage-volumes.component.html
@@ -211,25 +211,6 @@
           />
         </nz-form-control>
       </nz-form-item>
-
-      <nz-form-item>
-        <nz-form-label [nzSpan]="6">部署节点</nz-form-label>
-        <nz-form-control [nzSpan]="18">
-          <nz-select 
-            nzPlaceHolder="请选择部署节点" 
-            [(ngModel)]="volumeFormData.node_id"
-            name="node_id"
-            nzAllowClear
-            [nzDisabled]="isEditMode"
-          >
-            <nz-option 
-              *ngFor="let node of nodes" 
-              [nzValue]="node.id" 
-              [nzLabel]="node.hostname + ' (' + node.ip + ')'"
-            ></nz-option>
-          </nz-select>
-        </nz-form-control>
-      </nz-form-item>
     </form>
   </div>
 </nz-modal>
@@ -248,6 +229,7 @@
         <nz-descriptions-item nzTitle="ID">{{ selectedVolume.id }}</nz-descriptions-item>
         <nz-descriptions-item nzTitle="名称">{{ selectedVolume.name }}</nz-descriptions-item>
         <nz-descriptions-item nzTitle="存储池">{{ selectedVolume.pool_name }}</nz-descriptions-item>
+        <nz-descriptions-item nzTitle="节点">{{ selectedVolume.node_name || '未分配' }}</nz-descriptions-item>
         <nz-descriptions-item nzTitle="大小">{{ formatSize(selectedVolume.size_gb) }}</nz-descriptions-item>
         <nz-descriptions-item nzTitle="卷类型">
           <nz-tag [nzColor]="selectedVolume.volume_type === 'qcow2' ? 'green' : 'blue'">
