修改网站标题

--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -9,7 +9,7 @@
     <div class="sidebar-logo">
       <a routerLink="/welcome">
         <img src="https://ng.ant.design/assets/img/logo.svg" alt="logo">
-        <h1>管理系统</h1>
+        <h1>Easy VM Cloud</h1>
       </a>
     </div>
     <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
