--- a/frontend/src/app/pages/storage/storage-volumes/storage-volumes.component.html
+++ b/frontend/src/app/pages/storage/storage-volumes/storage-volumes.component.html
@@ -79,37 +79,38 @@
             </td>
             <td>
               <div class="action-buttons">
+                <!-- 主要操作按钮 -->
                 <button nz-button nzType="link" nzSize="small" (click)="showVolumeDetails(volume)" class="action-btn detail-btn">
                   <span nz-icon nzType="eye"></span>
                   详情
                 </button>
-                <button nz-button nzType="link" nzSize="small" (click)="showEditVolumeModal(volume)" class="action-btn edit-btn">
-                  <span nz-icon nzType="edit"></span>
-                  编辑
-                </button>
-                <button nz-button nzType="link" nzSize="small" (click)="showCloneVolumeModal(volume)" class="action-btn clone-btn">
-                  <span nz-icon nzType="copy"></span>
-                  克隆
-                </button>
-                <button nz-button nzType="link" nzSize="small" (click)="showResizeVolumeModal(volume)" class="action-btn resize-btn">
-                  <span nz-icon nzType="expand"></span>
-                  扩容
-                </button>
-                <button 
-                  nz-button 
-                  nzType="link" 
-                  nzSize="small" 
-                  nzDanger 
-                  class="action-btn delete-btn"
-                  nz-popconfirm
-                  nzPopconfirmTitle="确定要删除这个存储卷吗？"
-                  nzOkText="确定"
-                  nzCancelText="取消"
-                  (nzOnConfirm)="deleteVolume(volume)"
-                >
-                  <span nz-icon nzType="delete"></span>
-                  删除
-                </button>
+                
+                <!-- 更多操作下拉菜单 -->
+                <a nz-dropdown [nzDropdownMenu]="menu" class="action-btn more-btn">
+                  更多
+                  <nz-icon nzType="down" />
+                </a>
+                <nz-dropdown-menu #menu="nzDropdownMenu">
+                  <ul nz-menu nzSelectable>
+                    <li nz-menu-item (click)="showEditVolumeModal(volume)">
+                      <span nz-icon nzType="edit"></span>
+                      编辑
+                    </li>
+                    <li nz-menu-item (click)="showCloneVolumeModal(volume)">
+                      <span nz-icon nzType="copy"></span>
+                      克隆
+                    </li>
+                    <li nz-menu-item (click)="showResizeVolumeModal(volume)">
+                      <span nz-icon nzType="expand"></span>
+                      扩容
+                    </li>
+                    <li nz-menu-divider></li>
+                    <li nz-menu-item nzDanger (click)="deleteVolume(volume)">
+                      <span nz-icon nzType="delete"></span>
+                      删除
+                    </li>
+                  </ul>
+                </nz-dropdown-menu>
               </div>
             </td>
           </tr>
